<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lncityCountry"
        android:id="@+id/lnDistance"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txtDistancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:textColor="@color/colorAccent"/>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spDistancia"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_input_layout_name_race"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lnDistance"
        android:id="@+id/lnFechaDesdeHasta"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtFechaDesde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_desde"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dtpFechaDesde"
                android:layout_marginTop="10dp"
                android:text="gggg"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtFechaHasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_hasta"
                android:textColor="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_hasta_default"
                android:id="@+id/dtpFechaHasta"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="22dp"
        android:id="@+id/lncityCountry"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lugar"
            android:id="@+id/text_input_layout_lugar">

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edtLugar" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>