<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRace"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:background="@color/divider"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_name_race"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_race">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtNameRace"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/distancia"
                    android:id="@+id/text_input_layout_distancia"
                    android:layout_below="@+id/text_input_layout_name_race"
                    android:layout_marginTop="20dp">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/edtDistancia" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/text_input_layout_distancia"
                    android:id="@+id/lncityCountry">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/pais"
                        android:id="@+id/text_input_layout_pais"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edtPais" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/ciudad"
                        android:id="@+id/text_input_layout_ciudad"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/edtCiudad" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/lnFechaIniCarrera"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/lncityCountry"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txtFechaDesde"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha_desde"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dtpFechaDesde"
                        android:layout_marginTop="10dp"
                        android:text="gggg"/>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/web"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/lnFechaIniCarrera">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtWeb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textWebEditText"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/text_input_layout_web">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_camera"
        app:layout_anchor="@id/imgRace"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
