<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:layout_weight="1"
                tools:context="com.mel.seekraces.activities.login.LoginActivity">

                <TextView
                    android:id="@+id/txtAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="60sp"
                    android:text="@string/app_name"
                    android:gravity="center_horizontal"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtAppName"
                    android:layout_marginTop="30dp"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_below="@id/text_input_layout_email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/text_input_layout_pass"
                    android:layout_marginTop="25dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryText"
                    android:backgroundTint="@color/icons"
                    android:layout_centerHorizontal="true"
                    android:layout_alignLeft="@+id/btnSignInGoogle"
                    android:layout_alignRight="@+id/btnSignInGoogle"/>

                <Button
                    android:id="@+id/btnSignInGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_below="@id/btnLogin"
                    android:layout_centerHorizontal="true"
                    android:text="@string/common_signin_button_text_long"
                    android:drawableLeft="@mipmap/ic_google"
                    android:paddingLeft="8dp"
                    android:paddingRight="20dp"
                    android:drawablePadding="10dp"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/icons"/>

                <!--Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:layout_below="@+id/btnLogin"
                    style="?android:textAppearanceSmall"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    android:backgroundTint="@color/colorPrimaryLight"/>

                <Button
                    android:id="@+id/btnLoginFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_facebook"
                    android:layout_below="@+id/btnSignIn"
                    android:visibility="gone"
                    style="?android:textAppearanceSmall"
                    android:textColor="@color/color_text_button_facebook"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:textStyle="bold"
                    android:backgroundTint="@color/color_button_facebook"/-->

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"/>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnForgotPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryText"
                    android:text="@string/forgotPwd"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnSignIn"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/signin"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>

