<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="gone"/>
    <ScrollView
        android:id="@+id/lnDataRace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgRace"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.6"
            android:scaleType="fitXY"
            android:background="@color/divider"/>

            <RelativeLayout
                android:layout_weight="0.4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/lugar"
                    android:layout_below="@+id/lnNameDistance"
                    android:id="@+id/text_input_layout_lugar"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:completionThreshold="1"
                        android:ems="10"
                        android:id="@+id/edtLugar" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/lnFechaHora"
                    android:layout_below="@+id/text_input_layout_lugar"
                    android:layout_marginTop="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/lnFechaIniCarrera"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/txtFechaDesde"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fecha"
                            android:textColor="@color/colorAccent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/dtpFechaDesde"
                            android:layout_marginTop="10dp"
                            android:text="gggg"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/txtHora"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hora"
                            android:textColor="@color/colorAccent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="hhhhhh"
                            android:id="@+id/tipHora"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_web"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/web"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/lnFechaHora">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtWeb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textWebEditText"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/text_input_layout_web">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine"
                        android:maxLength="100"
                        android:ems="10"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/lnNameDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout_name_race"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_race"
                        android:layout_weight="1" >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/edtNameRace"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:ems="10"/>
                    </android.support.design.widget.TextInputLayout>
                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spDistancia"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/text_input_layout_name_race"/>
                </LinearLayout>

            </RelativeLayout>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_camera"
        app:layout_anchor="@id/imgRace"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
